--- a/resume/education.tex
+++ b/resume/education.tex
@@ -4,7 +4,7 @@
     {M.S. (Ing.) in Open Informatics}
     {Czech Technical University, Faculty of Electrical Engineering}
     {Prague, Czech Republic}
-    {Sep 2016 - Present}
+    {Sep 2016 - Present.}
     {
       \begin{cvitems}
         \item {Computer Science and Software Engineering.}
