Add a new jobs, fix typos

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-%!TEX TS-program = xelatex
+% !TEX program = xelatex
 %!TEX encoding = UTF-8 Unicode
 % Awesome CV LaTeX Template
 %
@@ -57,13 +57,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
 \name{Jakub}{Begera}
-\address{Milady Horákové 27, Prague 170 00, Czech Republic}
+\address{Milady Horákové 399/27, Prague 170 00, Czech Republic}
 \mobile{(+420) 774 572 375} 
 %%% Social
 \email{jakub@begera.cz}
 %\homepage{www.}
 \github{jakubbegera}
 \linkedin{jbegera}
+\stackoverflow{2878333}{jBegera}
 %%% Optionals
 \position{Software Engineer}
 
@@ -84,8 +85,8 @@
 %%% Import contents
 \import{\sectiondir}{education.tex}
 \import{\sectiondir}{experience.tex}
-%\import{\sectiondir}{extracurricular.tex}
-\clearpage
+\import{\sectiondir}{extracurricular.tex}
+% \clearpage
 \import{\sectiondir}{publications.tex}
 
 \end{document}
