--- a/resume/education.tex
+++ b/resume/education.tex
@@ -1,14 +1,14 @@
 \cvsection{Education}
 \begin{cventries}
   \cventry
-    {M.S. (Ing.) in Open Informatics}
+    {M.S. (Ing.) in Software Engineering}
     {Czech Technical University, Faculty of Electrical Engineering}
     {Prague, Czech Republic}
-    {Sep 2016 - Present.}
+    {Sep 2016 - Feb 2019}
     {
       \begin{cvitems}
-        \item {Computer Science and Software Engineering.}
-        \item {Specialization in Software Engineering.}
+        \item {Study programme - Open Informatics}
+        \item {Specialization - Software Engineering}
       \end{cvitems}
     }
 
@@ -19,18 +19,19 @@
     {Feb 2018 - May 2018}
     {
       \begin{cvitems}
-        \item {Finishing of Master's thesis within internship in PARMA group (PAttern Recognition and MAchine Learning Group)}
+        \item {Finalization of Master's thesis within internship in PARMA group (PAttern Recognition and MAchine Learning Group)}
       \end{cvitems}
     }
 
   \cventry
-    {B.S. (Bc.) in Software Engineering and Management}
+    {B.S. (Bc.) in Software Systems}
     {Czech Technical University, Faculty of Electrical Engineering}
     {Prague, Czech Republic}
     {Sep 2013 - Jun 2016}
     {
       \begin{cvitems}
-        \item {Software Engineering specialization.}
+        \item {Study programme - Open Informatics}
+        \item {Specialization - Software Systems}
       \end{cvitems}
     }
 
@@ -41,7 +42,7 @@
     {July 2015 - Aug 2015}
      {
       \begin{cvitems}
-        \item {Summer school focused on Aerospace Information Technology, such as: avionics, orbital mechanics, control, real-time systems and mission control, control of quadrocopters, power subsystem etc.}
+        \item {Summer school focused on Aerospace Information Technology, such as: avionics, orbital mechanics, control, real-time systems and mission control, control of quadrocopters, power subsystem, etc.}
       \end{cvitems}
     }
 \end{cventries}
