--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,13 +1,44 @@
 \cvsection{Experience}
 \begin{cventries}
+  
+  \cventry
+    {Senior Software Engineer}
+    {Avast Software}
+    {Prague, Czech Republic}
+    {Aug 2019 - present}
+    {
+      \begin{cvitems}
+        \item {Working in a team of software engineers, responsible for the development of the leading software security solution for Android devices.}
+        \item {Collaborating with quality engineers, user research, product management, design, and support teams to ensure quality in all phases of app development.}
+      \end{cvitems}
+    }
+
+    \cventry
+    {Software Consultant}
+    {NAV Flight Services}
+    {Prague, Czech Republic}
+    {Mar 2019 - present}
+    {
+      \begin{cvitems}
+        \item {Development of software for route planning and optimization in the aviation industry.}
+        \item I'm responsible for all software engineering aspects (architecture, implementation, quality assurance, and deployment) of the following products:
+        \begin{itemize}
+          \item \textit{NAVlink} - backend application based on a microservice architecture (\texttt{Kotlin}, \texttt{Spring Boot}, \texttt{RabbitMQ}, \texttt{MSSQL}) used for ground~$\leftrightarrow$~aircraft communication, such as flight plan delivery, optimized climb/cruise/descent winds uplinks for fuel optimization (e.g. \approx10 tones of fuel-saving per year for A320), etc.
+          \item \textit{NAVtracker} - backend \& web app (\texttt{Spring Boot~+~Kotlin}, \texttt{React~+~TypeScript}) for aircraft position tracking and flight plan deviation alerting using various data sources (Eurocontrol, aircraft data-link communication, ADS-B data, etc.), primarily used by a flight dispatchers.
+          \item \textit{NAVapi} - backend app exposing a JSON REST API of NAV's systems (\texttt{Spring Boot~+~Kotlin}).
+        \end{itemize}
+      \end{cvitems}
+    }
+
   \cventry
     {Android Developer}
     {Inventi LABS}
     {Prague, Czech Republic}
-    {May 2018 - present}
+    {May 2018 - Jul 2019}
     {
       \begin{cvitems}
-      \item {Analysis, design, implementation and testing of Android applications.}
+        \item {Development of custom native Android applications using Kotlin and Java.}
+        \item {Android apps I have been working on as a lead developer: \textit{RSI News}, \textit{RSI Sport}, and \textit{Bezrealitky.cz}.}
       \end{cvitems}
     }
   \cventry
@@ -17,43 +48,42 @@
     {Feb 2016 - May 2018}
     {
       \begin{cvitems}
-      \item {Analysis, design, implementation and testing of Android applications.}
-      \item {Company acquired by Inventi on May 2018.}
+        \item {Development of custom native Android applications using Kotlin and Java.}
+        \item {Company acquired by Inventi on May 2018.}
       \end{cvitems}
     }
   \cventry
     {Software Developer}
     {Institute of Experimental and Applied Physics, Czech Technical University}
     {Prague, Czech Republic}
-    {Nov 2013 - Present}
+    {Nov 2013 - Jun 2019}
     {
       \begin{cvitems}
-      \item {Developing of the data acquisition, control and calibration software for radiation detector instrumentation.}
+      \item {Development of the data acquisition, control, and calibration software for radiation detector instrumentation - \textit{Timepix/Medipix} pixel particle detectors developed within the collaboration with CERN and other research institutes and universities.}
+      \item {I participated in various physical experiments with \textit{Timepix} detectors in particle accelerators facilities, such as SPS (Super Proton Synchrotron) in CERN.}
       \end{cvitems}
     }
   \cventry
     {Collaboration member}
     {CERN}
     {Geneva, Switzerland}
-    {Nov 2014 - Present}
+    {Nov 2014 - Jun 2019}
     {
       \begin{cvitems}
-      \item {ATLAS TPX experiment: development, deployment and testing of data acquisition software and its integration into CERN's software infrastructure (such as Detector Control System, etc.).}
-      \item{Taking shifts in ATLAS Control room at Inner Detector (ID) desk (operation control and data quality monitoring of sub-detectors of the ID, consisting of: Pixel, Semiconductor Tracker (SCT), Transition Radiation Tracker (TRT) and Beam Conditions Monitors).}
-      \item{Member of the ATLAS Collaboration.}
+      \item {ATLAS TPX experiment (the network of Timepix-based particle pixel detectors, installed in ATLAS detector in LHC): development, deployment, and testing of distributed detector control and data acquisition software and its integration into CERN's software infrastructure (such as Detector Control System, etc.).}
+      \item{Working at ATLAS Control room as an Inner Detector operator (operation control and data quality monitoring).}
       \end{cvitems}
     }
   \cventry
     {Member of The Academic Senate}
     {Czech Technical University}
     {Prague, Czech Republic}
-    {Jan 2017 - Present}
+    {Jan 2017 - Feb 2019}
     {
       \begin{cvitems}
-      \item {Representative of the Faculty of Electrical Engineering in the Academic Senate of the CTU in Prague elected by student community.}
+      \item {Representative of the Faculty of Electrical Engineering in the Academic Senate of the CTU in Prague elected by the student community.}
       \item {Member of Committee for IT Strategy and Student's Committee.}
       \end{cvitems}
     }
-    
     
 \end{cventries}
