--- a/resume/extracurricular.tex
+++ b/resume/extracurricular.tex
@@ -1,4 +1,13 @@
 \cvsection{Extracurricular Activity}
 \begin{cventries}
-  
+    \cventry
+    {external lecturer}
+    {Czech Technical University, Faculty of Electrical Engineering}
+    {Prague, Czech Republic}
+    {2019 - present}
+    {
+      \begin{cvitems}
+        \item {Giving lectures about Android development within the Principles of mobile applications course (\emph{B6B39PDA}).}
+      \end{cvitems}
+    }
 \end{cventries}
