--- a/resume/publications.tex
+++ b/resume/publications.tex
@@ -1,14 +1,34 @@
 \cvsection{Publications}
 \begin{cventries}
-  \cventry
-    {Petr Manek, Jakub Begera, Benedikt Bergmann, Petr Burian}
-    {Software system for data acquisition and analysis operating the ATLAS-TPX network}
-    {IEEE - International Conference on Applied Electronics}
-    {Sep. 2017}
-    {
-      \begin{cvitems}
-        \item {I participated in writing of a publication about research topic related to my Bachelor Thesis.}
-        \item {Published on International Conference on Applied Electronics.}
-      \end{cvitems}
-    }
+    \cventry
+      {S. Calderón, J. Barrantes, J. Schuster, M. Mendez, J. Begera}
+      {Automatic Calibration of the Deceived Non Local Means Filter for Improving the Segmentation of Cells in Fluorescence Based Microscopy}
+      {IEEE International Conference on Biomedical Engineering and Applications}
+      {Jul 2018}
+      {
+        \begin{cvitems}
+          \item {This article has been created during my study stay at Costa Rica Institute of Technology.}
+          \item {Presented on IEEE International Conference on Biomedical Engineering and Applications in Funchal, Portugal.}
+        \end{cvitems}
+      }
+    \cventry
+      {Andre Sopczak, Babar Ali, Jakub Begera, Benedikt Bergmann, Thomas Billoud, Bartolomej Biskup, Petr Burian, Davide Caforio, Erik Heijne, Josef Janecek, Claude Leroy, Petr Manek, Yesid Mora, Stanislav Pospisil, Michal Suk, Zdenek Svoboda}
+      {Precision Measurements of Induced Radioactivity and Absolute Luminosity Determination With TPX Detectors in LHC Proton--Proton Collisions at 13 TeV}
+      {IEEE Transactions on Nuclear Science}
+      {Jul 2018}
+      {
+        \begin{cvitems}
+          \item {I've participated in the development of software instrumentation needed for data acquisition and analysis, which were used in this publication.}
+        \end{cvitems}
+      }
+    \cventry
+      {Petr Manek, Jakub Begera, Benedikt Bergmann, Petr Burian}
+      {Software system for data acquisition and analysis operating the ATLAS-TPX network}
+      {IEEE International Conference on Applied Electronics}
+      {Sep 2017}
+      {
+        \begin{cvitems}
+          \item {Presented on International Conference on Applied Electronics in Pilsen, Czechia.}
+        \end{cvitems}
+      }
 \end{cventries}
